# service_record

./: .cmake-format.yaml  .envrc  .gitignore  CMakeLists.txt  README.md  activate.sh  build.sh  conanfile.py  install.sh  run.sh  service_record.code-workspace  test.sh
cli/: CMakeLists.txt
cli/src/: main-cli.cpp
cmake/: helpers.cmake  tools.cmake
env/: _build_env_vars.sh  setup.sh
env/profiles/: base.profile  native.profile  wasm.profile
include/service_record/: service_record.h
src/: CMakeLists.txt  config.h.in  service_record.c  service_record.cpp  services.c  services.h  version.h.in
tests/: CMakeLists.txt
tests/src/: service_record-test.cpp
